# finance_kol_analyzer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  youtube_links.txt
src/: run_transcript.py  run_x_tweets.py  run_x_tweets_monthly.py  verify_twitter_credentials.py
src/finance_kol_analyzer/: __init__.py  x_tweets.py  youtube_metadata.py  youtube_transcripts.py
tests/: test_x_tweets.py  test_youtube_metadata.py  test_youtube_transcripts.py
