[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-kol-analyzer"
version = "0.1.0"
description = "Utilities for analyzing finance KOL content."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi",
    "pyyaml>=6.0.1",
    "tweepy>=4.14.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
